--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -7,5 +7,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
-  }
+  },
+  "include": ["*.ts", "*.tsx"],
+  "exclude": ["node_modules", "public", "dist"]
 }
