Add build-wasm.sh script for streamlined WASM build process and update Netlify configuration
- Introduced build-wasm.sh to encapsulate the WASM build steps, including Rust toolchain setup, wasm-pack installation, and frontend build.
- Updated netlify.toml to reference the new build script for cleaner build commands.
- Modified webpack.config.js to adjust the build mode based on NODE_ENV and added a rule to copy WASM package files to the public directory.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "rustup default stable && curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && wasm-pack build --target web && cd www && npm install && npm run build"
+  command = "./build-wasm.sh"
   publish = "www/public"
 
 [build.environment]
