Enhance build-wasm.sh for improved WASM build process and update Netlify configuration
- Updated build-wasm.sh to skip toolchain setup if already configured and to check for wasm-pack installation, installing it if necessary.
- Modified the frontend build process to use pnpm if available, falling back to npm otherwise.
- Updated netlify.toml to specify pnpm as the package manager for builds.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,8 @@
   publish = "www/public"
 
 [build.environment]
+  # Use pnpm as package manager
+  NPM_FLAGS = "--package-manager=pnpm"
 
 [[headers]]
   for = "/*.wasm"
