Update WASM build configuration for Netlify
- Disabled wasm-opt in Cargo.toml to prevent build errors and improve CI build times.
- Changed the build command in netlify.toml to execute the new './build-wasm.sh' script for a streamlined WASM build process.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,7 @@ strip = true         # Strip debug symbols
 # --enable-bulk-memory: Required for wasm-bindgen generated code (uses memory.copy, etc.)
 # -Os: Size optimization (balanced, wasm-pack default)
 # -O:  Speed optimization (default wasm-opt behavior)
+# Disable wasm-opt for Netlify builds to avoid configuration errors and speed up build time
+# The Rust compiler optimizations (opt-level = "z", lto = true) are sufficient for size optimization
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz", "--enable-bulk-memory"]  # Maximum size optimization with bulk memory support   
+wasm-opt = false  # Disable wasm-opt to avoid build errors and speed up CI builds   
