Update .gitignore and netlify.toml for improved build configuration
- Added a rule to .gitignore to exclude all markdown files except README.md.
- Commented out the build command in netlify.toml, indicating that no build command is needed as the www/public directory is already committed to Git.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "./build-wasm.sh"
+  # No build command needed - www/public/ is already committed to Git
+  # command = "./build-wasm.sh"
   publish = "www/public"
 
 [build.environment]
